XMLtoCSV/objects/unpackaged/objects/Content_Acknowledgement_vod__c.object
<CustomObject>
    <description>Maintains fulfillment data for items shipped directly to HPCs including shipment and delivery status. Used to capture Acknowledgement of Content receipt signatures.</description>
    <fields>
        <fullName>AOC_Due_Date_vod__c</fullName>
        <formula>Ship_Date_vod__c + 14</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AOC Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>References the Account that requested the product for fulfillment.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Content Acknowledgements</relationshipLabel>
        <relationshipName>Content_Acknowledgements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alert_Created_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether an Alert has been created for the User when the Acknowledgement of Content Due Date was reached.</description>
        <label>Alert Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alert_Duration_vod__c</fullName>
        <description>Determines the number of days an Alert will be active if created via the Create_Alert_vod field.</description>
        <label>Alert Duration</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Reference_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>References the Call record that contains the initial BRC request.</description>
        <label>Call Reference</label>
        <referenceTo>Call2_vod__c</referenceTo>
        <relationshipLabel>Content Acknowledgements</relationshipLabel>
        <relationshipName>Content_Acknowledgements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Text_vod__c</fullName>
        <description>The textual value of the Call record that contains the initial BRC request.</description>
        <label>Call Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Alert_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether an Alert should be created for the User when the Acknowledgement of Content Due Date is reached.</description>
        <label>Create Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credentials_vod__c</fullName>
        <description>The medical degree of the Account that the requested the product for fullfillment.</description>
        <label>Credentials</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Date_vod__c</fullName>
        <description>The date on which the product was received by the requesting Account per the common carrier delivery receipt (UPS, FedEx, Priority, etc).</description>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disclaimer_vod__c</fullName>
        <description>Used to record sample disclaimer displayed when an Acknowledgement of Content is signed.</description>
        <label>Disclaimer</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Id_vod__c</fullName>
        <description>Unique record Id used for data loading.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>Field used by mobile products for synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Not_Received_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true to indicate that a product shipment was not received by an Account. Can be selected from the Signature page when capturing a signature from within Veeva CRM.</description>
        <label>Not Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Id_vod__c</fullName>
        <description>The Id of the product shipment assigned during the fulfillment process.</description>
        <label>Order Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Received_By_FirstName_vod__c</fullName>
        <description>Hosts the first name of the Receiver in the Content Acknowledgment form</description>
        <label>Received By First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Received_By_LastName_vod__c</fullName>
        <description>Hosts the last name of the Receiver in the Content Acknowledgment form</description>
        <label>Received By Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Received_By_Middle_vod__c</fullName>
        <description>Hosts the Middle name of the Receiver in the Content Acknowledgment form</description>
        <label>Received By Middle Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Received_By_vod__c</fullName>
        <description>The textual name of the person signing for the receipt of the product shipment as indicated on the AOC Signature page.</description>
        <label>Received By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Received_Title_vod__c</fullName>
        <description>The title of the person signing for the receipt of the product shipment as indicated on the AOC Signature page.</description>
        <label>Received Title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Receipt_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to a value of True if a receipt is requested from the receiver for the AOC via the signature page.</description>
        <label>Request Receipt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_ASSMCA_vod__c</fullName>
        <description>Stores the ASSMCA # of the practitioner that requested the BRC product shipment for shipments to PR.</description>
        <label>Ship ASSMCA #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Address_Line_1_vod__c</fullName>
        <description>Stores the first line of the Ship to Address for the product shipment.</description>
        <label>Ship Address Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Address_Line_2_vod__c</fullName>
        <description>Stores the second line of the Ship to Address for the product shipment.</description>
        <label>Ship Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Address_vod__c</fullName>
        <formula>Ship_Address_Line_1_vod__c &amp; IF(LEN(Ship_Address_Line_2_vod__c) &gt; 0, &quot;, &quot; &amp; Ship_Address_Line_2_vod__c, &quot;&quot;) &amp; IF(LEN(Ship_City_vod__c) &gt; 0, &quot;, &quot; &amp; Ship_City_vod__c, &quot;&quot;) &amp; IF(LEN(Ship_State_vod__c) &gt; 0, &quot;, &quot; &amp; Ship_State_vod__c, &quot;&quot;) &amp; IF(LEN(Ship_Zip_vod__c) &gt; 0, &quot; &quot; &amp; Ship_Zip_vod__c, &quot;&quot;)&amp; IF(LEN(Ship_Country_vod__c) &gt; 0, &quot;&quot; &amp; Ship_Country_vod__c, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_CDS_vod__c</fullName>
        <description>Stores the CDS # of the practitioner that requested the BRC product shipment when a CDS # is required in the state.</description>
        <label>Ship CDS #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_City_vod__c</fullName>
        <description>Stores the city of the Ship to Address for the product shipment.</description>
        <label>Ship City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Country_vod__c</fullName>
        <description>Stores the country of the Ship to Address for the product shipment.</description>
        <label>Ship Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_DEA_vod__c</fullName>
        <description>Stores the DEA # of the practitioner that requested the BRC product shipment when the product shipped is a controlled substance.</description>
        <label>Ship DEA #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Date_vod__c</fullName>
        <description>The date on which the product shipment was sent to the Account.</description>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_License_vod__c</fullName>
        <description>Stores the License # of the practitioner that requested the BRC product shipment.</description>
        <label>Ship License #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Location_vod__c</fullName>
        <description>Stores the Business Account location for the product shipment.</description>
        <label>Ship Location</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_State_vod__c</fullName>
        <description>Stores the state of the Ship to Address for the product shipment.</description>
        <label>Ship State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Zip_4__c</fullName>
        <description>Stores the zip 4 of the Ship to Address for the product shipment.</description>
        <label>Ship Zip 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Zip_vod__c</fullName>
        <description>Stores the zip code of the Ship to Address for the product shipment.</description>
        <label>Ship Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_Date_vod__c</fullName>
        <description>Captures the date and time of the signature captured for the AOC record. Users must have access to this field in order to capture a signature for an AOC record.</description>
        <label>Signature Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Signature_vod__c</fullName>
        <description>Contains the base64 encoded string that represents the captured signature.</description>
        <label>Signature</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>The status of the AOC record. When an AOC record is completed, the record is locked and displayed as read-only.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Shipped_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unlock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When editable to a user, displays an Unlock button which allows the User to unlock and edit a record with a Completed status.</description>
        <label>Unlock</label>
        <type>Checkbox</type>
    </fields>
    <label>Content Acknowledgement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AOC-{000000000}</displayFormat>
        <label>AOC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Content Acknowledgements</pluralLabel>
    <recordTypes>
        <fullName>Call_vod</fullName>
        <active>true</active>
        <description>Used to capture fulfillment data of BRC product requested via Calls</description>
        <label>Call_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>